--- a/style.css
+++ b/style.css
@@ -4,26 +4,20 @@ body {
   height: 100vh;
   align-items: center;
   justify-content: center;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: cadetblue;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 /* App container */
 .container {
   display: flex;
   flex-direction: column;
-  width: 480px;
+  width: 580px; 
   height: 672px;
   padding: 20px;
   align-items: center;
   border-radius: 10px;
-  background-color: cadetblue;
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
-}
-
-h1 {
-  text-align: center;
-  font-size: 24px;
-  margin-bottom: 8px;
+  
 }
 
 .image {
@@ -34,37 +28,34 @@ h1 {
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  margin-bottom: 8px;
+  margin-top: 40px;
+  margin-bottom: 10px;
 }
 
-.image h2 {
-  font-size: 20px;
+.image h1 {
+  font-size: 24px;
   margin-top: 0;
+  color: #f5f5f5;
 }
 
 .social {
   display: flex;
-  gap: 10px;
+  gap: 40px;
   margin-bottom: 16px;
-}
-
-.social a {
-  text-decoration: none;
-  color: #000;
-  padding: 8px 16px;
-  
-  border-radius: 5px;
-  font-weight: bold;
-  transition: background-color 0.3s;
-}
-
-.social a:hover {
-  background-color: #ddd;
 }
 
 .social-me img {
   width: 30px;
   height: 30px;
+  border-radius: 50%;
+  transition: transforn 0.3s ease;
+}
+
+.social img:hover {
+  border-radius: 50%;
+  background-color: #000;
+  transition: background-color 0.3s;
+  transform: scale(1.2);
 }
 
 .links {
@@ -80,8 +71,8 @@ h1 {
   justify-content: center;
   gap: 10px;
   background-color: #f5f5f5;
-  border-radius: 25px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.6);
 
 }
 
@@ -89,7 +80,6 @@ h1 {
 .icon img {
   width: 30px;
   height: 30px;
-  margin-left: 4px;
 }
 
 .icon a {
@@ -97,8 +87,13 @@ h1 {
   color: #333;
   font-size: 14px;
   flex-grow: 1;
+  padding-top: 4px;
 }
 
 .icon a:hover {
   color: #0073e6;
+}
+
+.link-text {
+  text-align: center;
 }
